# canonical-kubernetes-release-ci

./: .gitignore  README  pyproject.toml  test_requirements.txt  tox.ini
.github/: promotion.yaml
.github/workflows/: create-release-branch.md  create-release-branch.yaml  k8s-operator-charm-release.yaml  k8s-operator-nightly-sqa-builds.yaml  naming-lint-unit.yaml  promotion.yaml  publish-k8s-debs.yaml  rebuild-release-branch.yaml  update-pre-release-branches.yaml  upgrade-proposal-test.yaml
scripts/: charm_release.py  ensure_snap_builds.py  k8s_release.py  promote-tracks.py  promote_tracks.py  publish_k8s_debs.py  request_builds.py  requirements.txt  snap_release.py  sqa_builds.py  util.py
scripts/templates/canonical_k8s_sqa_addon/: aws_manifest.yaml.j2  canonicalk8s-maas.tfvars.j2  canonicalk8s-openstack.tfvars.j2  maas.yaml.j2  maas_ceph.yaml.j2  manifest_canonicalk8s_aws.yaml.j2  manifest_canonicalk8s_maas.yaml.j2  manifest_canonicalk8s_maas_ceph.yaml.j2  manifest_canonicalk8s_openstack.yaml.j2  openstack_manifest.j2  project.yaml.j2
scripts/templates/publish_k8s_debs/: Makefile.j2  README.j2  changelog.j2  control.j2  copyright.j2  devscripts.j2  source_options.j2
scripts/util/: charmhub.py  gh.py  k8s.py  lp.py  repo.py  snapstore.py  sqa.py  util.py
templates/: sqa-environments.yaml
tests/unit/: test_charm_release.py  test_k8s_release.py  test_promote_tracks.py
tests/unit/util/: test_k8s.py  test_lp.py  test_repo.py  test_snapstore.py  test_sqa.py  test_util.py
tests/unit/util/testdata/: addbuild.json  createaddon.json  createtestplaninstance.txt  (+2 more)
